2006-05-11  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSDragging.h,
	* Source/NSColorWell.m,
	* Source/NSImageView.m,
	* Source/NSOutlineView.m,
	* Source/NSSavePanel.m,
	* Source/NSTableView.m,
	* Source/NSTextView.m,
	* Source/NSApplication.m (-draggingEntered:, -draggingUpdated:):
	Changed return value to NSDragOperation.

2006-05-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-finishLaunching): Don't display the
	application icon window if the GSDontShowAppIcon is set to YES.
	Patch by  Saso Kiselkov <diablos@manga.sk>. 
	* Documentation/GuiUser/DefaultsSuppary.gsdoc: Document GSDontShowAppIcon.
	* Source/GSDragView.m: Resorted method definitions to remove
	compiler warnings.

2006-05-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSBundleAdditions.m: ([loadNibNamed:owner:]) if the NIB can't
	be found in the owners bundle, try the main bundle of the application.
	Fixes loading where the files owner is in a library, framework or
	bundle, but the Gorm/NIB file is in the application resources.
	I'm not sure this is the correct order, perhaps we should try the
	main bundle first and the library/framework only if the rersource
	is not in the main bundle.

2006-05-06  Fred Kiefer <FredKiefer@gmx.de>

	* Resources/Esperanto.lproj/Localizable.string,
	* Resources/German.lproj/Localizable.string: New string
	translations. Patch by Ingolf Jandt <i.jandt@web.de>.	
	* Resources/GNUmakefile: Added new languages.

2006-05-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-_editNextEditableCellAfterRow:column:,
	_editPreviousEditableCellBeforeRow:column:) Select the new row
	before editing a cell. 
	* Source/NSComboBoxCell.m (GSComboWindow -validateSelection):
	Removed the didChangeText call on the textObject.      
	Patches by Andreas Höschler <ahoesch@smartsoft.de>.
	
2006-05-05  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSWindow.m: ([-makeFirstResponder:]) fixed for nil argument.